feat: Add Azure certifications - Azure Developer Associate (AZ-204) and Azure AI Engineer Associate (AI-102). Now supporting 4 certification paths across AWS and Azure platforms

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AWS DVA-C02 Certification Practice</title>
+    <title>Cloud Certification Practice - AWS & Azure</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -42,87 +42,174 @@
                         </g>
                     </svg>
                 </div>
-                <h1>AWS Certification Practice</h1>
-                <p class="subtitle">Choose Your Certification Path</p>
+                <h1>Cloud Certification Practice</h1>
+                <p class="subtitle">AWS & Azure - Choose Your Certification Path</p>
             </div>
 
-            <div class="cert-cards">
-                <div class="cert-card" data-cert="developer">
-                    <div class="cert-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="16 18 22 12 16 6"></polyline>
-                            <polyline points="8 6 2 12 8 18"></polyline>
-                        </svg>
+            <div class="provider-section">
+                <h2 class="provider-title">
+                    <span class="provider-badge aws">AWS</span>
+                    Amazon Web Services
+                </h2>
+                <div class="cert-cards">
+                    <div class="cert-card aws" data-cert="aws-developer">
+                        <div class="cert-icon aws-dev">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="16 18 22 12 16 6"></polyline>
+                                <polyline points="8 6 2 12 8 18"></polyline>
+                            </svg>
+                        </div>
+                        <h2>AWS Certified Developer</h2>
+                        <h3>Associate Level</h3>
+                        <p class="cert-code">DVA-C02</p>
+                        <div class="cert-details">
+                            <div class="detail-item">
+                                <span class="detail-icon">📚</span>
+                                <span>122 Questions</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">⏱️</span>
+                                <span>12 min practice</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">🎯</span>
+                                <span>10 Q per exam</span>
+                            </div>
+                        </div>
+                        <button class="cert-select-btn" data-cert="aws-developer">
+                            Start Practice
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </button>
                     </div>
-                    <h2>AWS Certified Developer</h2>
-                    <h3>Associate Level</h3>
-                    <p class="cert-code">DVA-C02</p>
-                    <div class="cert-details">
-                        <div class="detail-item">
-                            <span class="detail-icon">📚</span>
-                            <span>122 Questions</span>
-                        </div>
-                        <div class="detail-item">
-                            <span class="detail-icon">⏱️</span>
-                            <span>12 min practice</span>
-                        </div>
-                        <div class="detail-item">
-                            <span class="detail-icon">🎯</span>
-                            <span>10 Q per exam</span>
-                        </div>
-                    </div>
-                    <button class="cert-select-btn" data-cert="developer">
-                        Start Practice
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="9 18 15 12 9 6"></polyline>
-                        </svg>
-                    </button>
-                </div>
 
-                <div class="cert-card" data-cert="ai-practitioner">
-                    <div class="cert-icon ai">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
-                            <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
-                            <line x1="12" y1="22.08" x2="12" y2="12"></line>
-                        </svg>
+                    <div class="cert-card aws" data-cert="aws-ai">
+                        <div class="cert-icon aws-ai">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                                <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                                <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                            </svg>
+                        </div>
+                        <h2>AWS AI Practitioner</h2>
+                        <h3>Foundational Level</h3>
+                        <p class="cert-code">AIF-C01</p>
+                        <div class="cert-details">
+                            <div class="detail-item">
+                                <span class="detail-icon">📚</span>
+                                <span>49 Questions</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">⏱️</span>
+                                <span>12 min practice</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">🎯</span>
+                                <span>10 Q per exam</span>
+                            </div>
+                        </div>
+                        <button class="cert-select-btn" data-cert="aws-ai">
+                            Start Practice
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </button>
                     </div>
-                    <h2>AWS Certified AI Practitioner</h2>
-                    <h3>Foundational Level</h3>
-                    <p class="cert-code">AIF-C01</p>
-                    <div class="cert-details">
-                        <div class="detail-item">
-                            <span class="detail-icon">📚</span>
-                            <span>50 Questions</span>
+                </div>
+            </div>
+
+            <div class="provider-section">
+                <h2 class="provider-title">
+                    <span class="provider-badge azure">Azure</span>
+                    Microsoft Azure
+                </h2>
+                <div class="cert-cards">
+                    <div class="cert-card azure" data-cert="azure-developer">
+                        <div class="cert-icon azure-dev">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="16 18 22 12 16 6"></polyline>
+                                <polyline points="8 6 2 12 8 18"></polyline>
+                            </svg>
                         </div>
-                        <div class="detail-item">
-                            <span class="detail-icon">⏱️</span>
-                            <span>12 min practice</span>
+                        <h2>Azure Developer Associate</h2>
+                        <h3>Associate Level</h3>
+                        <p class="cert-code">AZ-204</p>
+                        <div class="cert-details">
+                            <div class="detail-item">
+                                <span class="detail-icon">📚</span>
+                                <span>21 Questions</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">⏱️</span>
+                                <span>12 min practice</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">🎯</span>
+                                <span>10 Q per exam</span>
+                            </div>
                         </div>
-                        <div class="detail-item">
-                            <span class="detail-icon">🎯</span>
-                            <span>10 Q per exam</span>
-                        </div>
+                        <button class="cert-select-btn azure-btn" data-cert="azure-developer">
+                            Start Practice
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </button>
                     </div>
-                    <button class="cert-select-btn" data-cert="ai-practitioner">
-                        Start Practice
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="9 18 15 12 9 6"></polyline>
-                        </svg>
-                    </button>
+
+                    <div class="cert-card azure" data-cert="azure-ai">
+                        <div class="cert-icon azure-ai">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                                <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                                <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                            </svg>
+                        </div>
+                        <h2>Azure AI Engineer Associate</h2>
+                        <h3>Associate Level</h3>
+                        <p class="cert-code">AI-102</p>
+                        <div class="cert-details">
+                            <div class="detail-item">
+                                <span class="detail-icon">📚</span>
+                                <span>21 Questions</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">⏱️</span>
+                                <span>12 min practice</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-icon">🎯</span>
+                                <span>10 Q per exam</span>
+                            </div>
+                        </div>
+                        <button class="cert-select-btn azure-btn" data-cert="azure-ai">
+                            Start Practice
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
 
             <div class="cert-comparison">
-                <h3>🎓 Choose Based on Your Goals</h3>
+                <h3>🎓 Choose Based on Your Goals & Cloud Provider</h3>
                 <div class="comparison-grid">
                     <div class="comparison-item">
-                        <strong>Developer Associate</strong>
-                        <p>For developers building applications on AWS</p>
+                        <strong>🔧 Developer Associate</strong>
+                        <p>Build & deploy applications on cloud platforms</p>
                     </div>
                     <div class="comparison-item">
-                        <strong>AI Practitioner</strong>
-                        <p>For professionals working with AI/ML on AWS</p>
+                        <strong>🤖 AI/ML Engineers</strong>
+                        <p>Design & implement AI/ML solutions</p>
+                    </div>
+                    <div class="comparison-item">
+                        <strong>☁️ AWS</strong>
+                        <p>World's leading cloud platform</p>
+                    </div>
+                    <div class="comparison-item">
+                        <strong>⚡ Azure</strong>
+                        <p>Microsoft's enterprise cloud solution</p>
                     </div>
                 </div>
             </div>
